--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# lists of all individuals that have contributed content to the repository.
 
-Nfon Andrew Tatah <nfonandrew73@gmail.com>
-Mofor Emmanuel
+Francis John {chimex61@gmail.com}
+Tope Adebayo
