--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file list all individual who have contribute to this repository
 
-Leul Yiheyis <leulykpro@gmail.com>
+Francis John {chimex61@gmail.com}
 
-Peter Simiyu <simiyupeter10@gmail.com>
+Tope Adebayo {temitopeadebayo751@yahoo.com}
